--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dev:qq": "npm run build:qq -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch"
   },
-  "author": "",
+  "author": "zch",
   "license": "MIT",
   "dependencies": {
     "@tarojs/components": "2.0.5",
