--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@tarojs/taro-tt": "2.0.5",
     "@tarojs/taro-weapp": "2.0.5",
     "babel-runtime": "^6.26.0",
+    "jsonwebtoken": "^8.5.1",
     "nerv-devtools": "^1.5.5",
-    "nervjs": "^1.5.5"
+    "nervjs": "^1.5.5",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "@tarojs/mini-runner": "2.0.5",
